mcm-approach2/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: devchan-modresortchan-deployment
  labels:
    app: modresortchan
spec:
  selector:
    matchLabels:
      app: modresortchan
      release: modresort-devchan
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: modresortchan
        release: modresort-devchan
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: "kpostreich/modresort:1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
