mcm-approach2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: devchan-modresortchan-service
  labels:
    app: modresortchan
spec:
  type: ClusterIP
  ports:
  -  port: 9080
  selector:
    app: modresortchan
    release: modresort-devchan
    tier: frontend
