mcm-approach2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: devchan-modresortchan-route
  name: modresorts
spec:
  host:
  path: /
  port:
    targetPort: 9080
  to:
    kind: Service
    name: devchan-modresortchan-service
    weight: 100
  wildcardPolicy: None
